Agrego ejercicios de archivo, Algunos de taller de arreglos

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /PARCIAL_2/nbproject/private/
 /PARCIAL_2/build/
+/Ejercicio_de_archivo/nbproject/private/
+/Ejercicio_de_archivo/build/
+/Taller_Arreglos/nbproject/private/
+/Taller_Arreglos/build/
